compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__peel_ref_in_unary_expr.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var a : int var k := -a"
---
"a"@(FileId(1), 4..5) [ConstVar(Var, No)]: int
"k"@(FileId(1), 16..17) [ConstVar(Var, No)]: int
"<root>"@(dummy) [Module(No)]: <error>

