compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__set_ops_add.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "\n    type s : set of boolean\n    var a, b : s\n\n    % should all produce the same set\n    var _v_res : s\n\n    _v_res := a + b\n    _v_res := b + a\n    "
---
"s"@(FileId(1), 10..11) [Type]: set[DefId(LibraryId(0), LocalDefId(1))] of boolean
"s"@(FileId(1), 14..28) [Set]: <error>
"a"@(FileId(1), 37..38) [ConstVar(Var, No)]: set[DefId(LibraryId(0), LocalDefId(1))] of boolean
"b"@(FileId(1), 40..41) [ConstVar(Var, No)]: set[DefId(LibraryId(0), LocalDefId(1))] of boolean
"_v_res"@(FileId(1), 93..99) [ConstVar(Var, No)]: set[DefId(LibraryId(0), LocalDefId(1))] of boolean
"<root>"@(dummy) [Module(No)]: <error>

