compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__set_ops_wrong_types_add.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "\n    type s1 : set of boolean\n    type s2 : set of boolean\n    var a : s1\n    var b : s2\n    var i : int\n\n    % should all produce the left set\n    var _v_res : s1\n\n    _v_res := a + b\n\n    % error types\n    _v_res := a + i\n    _v_res := i + a\n    "
---
"s1"@"src/main.t:10..12" [Type]: set[DefId(PackageId(3072), LocalDefId(1))] of boolean
"s1"@"src/main.t:15..29" [Set]: <error>
"s2"@"src/main.t:39..41" [Type]: set[DefId(PackageId(3072), LocalDefId(3))] of boolean
"s2"@"src/main.t:44..58" [Set]: <error>
"a"@"src/main.t:67..68" [ConstVar(Var, No)]: set[DefId(PackageId(3072), LocalDefId(1))] of boolean
"b"@"src/main.t:82..83" [ConstVar(Var, No)]: set[DefId(PackageId(3072), LocalDefId(3))] of boolean
"i"@"src/main.t:97..98" [ConstVar(Var, No)]: int
"_v_res"@"src/main.t:152..158" [ConstVar(Var, No)]: set[DefId(PackageId(3072), LocalDefId(1))] of boolean
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:181..182: mismatched types for addition
| note for src/main.t:183..184: this is of type `set s2 (of boolean)`
| note for src/main.t:179..180: this is of type `set s1 (of boolean)`
| error for src/main.t:181..182: `set s1 (of boolean)` cannot be added to `set s2 (of boolean)`
| info: operands must both be numbers, strings, or sets
error at src/main.t:220..221: mismatched types for addition
| note for src/main.t:222..223: this is of type `int`
| note for src/main.t:218..219: this is of type `set s1 (of boolean)`
| error for src/main.t:220..221: `set s1 (of boolean)` cannot be added to `int`
| info: operands must both be numbers, strings, or sets
error at src/main.t:240..241: mismatched types for addition
| note for src/main.t:242..243: this is of type `set s1 (of boolean)`
| note for src/main.t:238..239: this is of type `int`
| error for src/main.t:240..241: `int` cannot be added to `set s1 (of boolean)`
| info: operands must both be numbers, strings, or sets
