compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__set_ops_wrong_types_mul.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "\n    type s1 : set of boolean\n    type s2 : set of boolean\n    var a : s1\n    var b : s2\n    var i : int\n\n    % should all produce the left set\n    var _v_res : s1\n\n    _v_res := a * b\n\n    % error types\n    _v_res := a * i\n    _v_res := i * a\n    "
---
"s1"@(FileId(1), 10..12) [Type]: set[DefId(LibraryId(0), LocalDefId(1))] of boolean
"s1"@(FileId(1), 15..29) [Set]: <error>
"s2"@(FileId(1), 39..41) [Type]: set[DefId(LibraryId(0), LocalDefId(3))] of boolean
"s2"@(FileId(1), 44..58) [Set]: <error>
"a"@(FileId(1), 67..68) [ConstVar(Var, No)]: set[DefId(LibraryId(0), LocalDefId(1))] of boolean
"b"@(FileId(1), 82..83) [ConstVar(Var, No)]: set[DefId(LibraryId(0), LocalDefId(3))] of boolean
"i"@(FileId(1), 97..98) [ConstVar(Var, No)]: int
"_v_res"@(FileId(1), 152..158) [ConstVar(Var, No)]: set[DefId(LibraryId(0), LocalDefId(1))] of boolean
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 181..182: mismatched types for multiplication
| note in file FileId(1) for 183..184: this is of type `set s2 (of boolean)`
| note in file FileId(1) for 179..180: this is of type `set s1 (of boolean)`
| error in file FileId(1) for 181..182: `set s1 (of boolean)` cannot be multiplied by `set s2 (of boolean)`
| info: operands must both be numbers or sets
error in file FileId(1) at 220..221: mismatched types for multiplication
| note in file FileId(1) for 222..223: this is of type `int`
| note in file FileId(1) for 218..219: this is of type `set s1 (of boolean)`
| error in file FileId(1) for 220..221: `set s1 (of boolean)` cannot be multiplied by `int`
| info: operands must both be numbers or sets
error in file FileId(1) at 240..241: mismatched types for multiplication
| note in file FileId(1) for 242..243: this is of type `set s1 (of boolean)`
| note in file FileId(1) for 238..239: this is of type `int`
| error in file FileId(1) for 240..241: `int` cannot be multiplied by `set s1 (of boolean)`
| info: operands must both be numbers or sets
