compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__sized_char_literal.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var _ : char(1)"
---
"_"@(FileId(1), 4..5) [ConstVar(Var, No)]: char_n Fixed(Unevaluated(LibraryId(0), BodyId(0)))
"<root>"@(dummy) [Module(No)]: <error>

