compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__sized_char_simple_expr.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "var _ : char(1 - 1 * 1 + 2)"
---
"_"@"src/main.t:4..5" [ConstVar(Var, No)]: char_n Fixed(Unevaluated(PackageId(0), BodyId(0)))
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
