compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__sized_string_literal.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "var _ : string(1)"
---
"_"@"src/main.t:4..5" [ConstVar(Var, No)]: string_n Fixed(Unevaluated(PackageId(3072), BodyId(0)))
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
