compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__sized_string_over_sized.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "var _ : string(512)"
---
"_"@(FileId(1), 4..5) [ConstVar(Var, No)]: string_n Fixed(Unevaluated(PackageId(0), BodyId(0)))
"<root>"@(dummy) [Module(No)]: <error>

error at (FileId(1), 15..18): invalid character count size
| error for (FileId(1), 15..18): computed count is 512
| info: valid sizes are between 1 to 255
